# wordcount

./: Cargo.toml
benches/: bench_count_words.rs  benchmarks.rs
src/: lib.rs  main.rs
