[package]
name = "wordcount"
version = "0.1.0"
authors = ["michael <mchlstckl@gmail.com>"]
edition = "2018"

[dependencies]
hashbrown = "0.1"
lazy_static = "1.2.0"
rayon = "1.0"
regex = "1"
structopt = "0.2.10"
walkdir = "2"
tokio = "0.1.16"
futures = "0.1.17"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "benchmarks"
harness = false